tests/fixtures/errors/view_move_bind.z
# E0200: binding a map view's payload out is a move — it would drain
# the map's stored value.
main: function is {
    m: (Map String value: String)
    m.set key: "a".string value: "x".string
    got: m.get key: "a".string
    match (
        got
    ) case some then {
        stolen: got
        print stolen
    } case none then {}
}
